[gd_scene load_steps=2 format=2]

[ext_resource path="res://Editor/Scenes/TopMenu/TopMenu.gd" type="Script" id=1]

[node name="TopMenu" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenu" type="MenuButton" parent="."]
margin_right = 35.0
margin_bottom = 720.0
focus_mode = 2
mouse_default_cursor_shape = 2
text = "File"
switch_on_hover = true

[node name="EditMenu" type="MenuButton" parent="."]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 720.0
focus_mode = 2
mouse_default_cursor_shape = 2
text = "Edit"
switch_on_hover = true

[node name="ViewMenu" type="MenuButton" parent="."]
margin_left = 79.0
margin_right = 121.0
margin_bottom = 720.0
focus_mode = 2
mouse_default_cursor_shape = 2
text = "View"
switch_on_hover = true

[node name="HelpMenu" type="MenuButton" parent="."]
margin_left = 125.0
margin_right = 167.0
margin_bottom = 720.0
focus_mode = 2
mouse_default_cursor_shape = 2
text = "Help"
switch_on_hover = true
